# asaa

./: .env.example  LICENSE  README.md  asaa.db  main.py  pyproject.toml
src/asaa/: config.py  main.py
src/asaa/application/dtos/: auth_dtos.py  chat_dtos.py
src/asaa/application/services/: auth_service.py  chat_service.py
src/asaa/domain/entities/: message.py  thread.py  user.py
src/asaa/domain/repositories/: message_repository.py  thread_repository.py  user_repository.py
src/asaa/domain/services/: agent_service.py
src/asaa/infrastructure/auth/: jwt_service.py  password_service.py
src/asaa/infrastructure/database/: connection.py  models.py
src/asaa/infrastructure/repositories/: sqlalchemy_message_repository.py  sqlalchemy_thread_repository.py  sqlalchemy_user_repository.py
src/asaa/infrastructure/services/: mock_agent_service.py  openai_agent_service.py
src/asaa/presentation/api/: dependencies.py
src/asaa/presentation/api/auth/: auth_router.py
src/asaa/presentation/api/chat/: chat_router.py
src/asaa/presentation/api/threads/: threads_router.py
src/asaa/presentation/schemas/: auth_schemas.py  chat_schemas.py
tests/: test_basic_functionality.py
